[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
combinatorial = "0.2.0"
nalgebra = "0.32.3"
once_cell = "1.19.0"
rayon = "1.8.0"
regex = "1.10.2"
z3 = "0.12.1"

[profile.perf]
inherits = "release"
debug = 1
